[package]
name = "edit-tree-py"
version = "0.1.0"
authors = ["Tobias Pütz <tobias.puetz@uni-tuebingen.de>"]
edition = "2018"

[lib]
name = "edit_tree"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pyo3 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
edit_tree = {git = "https://github.com/twuebi/edit_tree"}
